// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c13 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c17 {
  padding-right: 56px;
  padding-left: 56px;
}

.c19 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c37 {
  padding-right: 16px;
  padding-left: 16px;
}

.c39 {
  padding-left: 12px;
}

.c43 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c46 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c49 {
  background: #ffffff;
  padding: 16px;
}

.c68 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c50 {
  border-radius: 4px;
}

.c52 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c54 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c56 {
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c61 {
  background: #dcdce4;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c63 {
  color: #666687;
  width: 0.6875rem;
}

.c66 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c18 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

.c20 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c24 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c47 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c62 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c16 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c21 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c26 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c27 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c38 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c42 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c48 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c59 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c60 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c51 {
  border: 1px solid #f6f6f9;
}

.c51:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c51:hover:not([aria-disabled='true']) .c10 {
  color: #4945ff;
}

.c51:hover:not([aria-disabled='true']) > .c7 {
  background: #f0f0ff;
}

.c51:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c65 {
  border: 1px solid #ffffff;
}

.c65:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c65:hover:not([aria-disabled='true']) .c10 {
  color: #4945ff;
}

.c65:hover:not([aria-disabled='true']) > .c7 {
  background: #f0f0ff;
}

.c65:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c64 path {
  fill: #666687;
}

.c25 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c25 > * + * {
  margin-top: 4px;
}

.c55 > * {
  margin-left: 0;
  margin-right: 0;
}

.c55 > * + * {
  margin-left: 12px;
}

.c57 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c57[aria-disabled='true'] {
  pointer-events: none;
}

.c57[aria-disabled='true'] svg path {
  fill: #666687;
}

.c57 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c57 svg path {
  fill: #4945ff;
}

.c57:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c57:focus-visible {
  outline: none;
}

.c57:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c58 {
  text-align: left;
}

.c58 > span {
  max-width: 100%;
}

.c58 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c58 svg path {
  fill: #8e8ea9;
}

.c53 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c53:hover svg path {
  fill: #4945ff;
}

.c14 {
  position: relative;
  outline: none;
}

.c14 svg {
  height: 12px;
  width: 12px;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c14[aria-disabled='true'] {
  pointer-events: none;
}

.c14:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c14:focus-visible {
  outline: none;
}

.c14:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c69 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c15 {
  height: 2rem;
}

.c15[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true'] .c10 {
  color: #666687;
}

.c15[aria-disabled='true'] svg > g,.c15[aria-disabled='true'] svg path {
  fill: #666687;
}

.c15[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true']:active .c10 {
  color: #666687;
}

.c15[aria-disabled='true']:active svg > g,.c15[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c15:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c15:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c15 svg > g,
.c15 svg path {
  fill: #ffffff;
}

.c28 {
  line-height: 0;
}

.c30 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c30::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c30::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c30:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c30::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c30[aria-disabled='true'] {
  color: inherit;
}

.c30:focus {
  outline: none;
  box-shadow: none;
}

.c29 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c29:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c34 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c34:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c40 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c40 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c40 svg path {
  fill: #666687;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c41 svg {
  width: 0.375rem;
}

.c35 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c35:focus {
  outline: none;
}

.c35[aria-disabled='true'] {
  cursor: not-allowed;
}

.c36 {
  width: 100%;
}

.c22 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c44 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c23 {
  grid-column: span 6;
  max-width: 100%;
}

.c45 {
  grid-column: span 7;
  max-width: 100%;
}

.c67 {
  grid-column: span 5;
  max-width: 100%;
}

.c0:focus-visible {
  outline: none;
}

.c32 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c32:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c33 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c33::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33:focus-within {
  outline: none;
}

.c31 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c31 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c31 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c31 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c31 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c4 {
  padding-right: 8px;
}

.c6 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c3 svg path {
  fill: #4945ff;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:68.75rem) {
  .c23 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c23 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c45 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c45 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c67 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c67 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c4 c5"
              >
                <svg
                  fill="none"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 0 1-.2.2H5.74l8.239 8.239a.2.2 0 0 1 0 .282L12.14 23.86a.2.2 0 0 1-.282 0L.14 12.14a.2.2 0 0 1 0-.282L11.86.14a.2.2 0 0 1 .282 0L13.98 1.98a.2.2 0 0 1 0 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6Z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c6"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c7 c8"
          >
            <div
              class="c7 c9"
            >
              <h1
                class="c10 c11"
              >
                Create API Token
              </h1>
            </div>
            <div
              class="c7 c12"
            >
              <button
                aria-disabled="false"
                class="c7 c13 c12 c14 c15"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 0 1 .286 0l2.85 2.89a.2.2 0 0 1 0 .28L9.554 20.854a.2.2 0 0 1-.285 0l-9.13-9.243a.2.2 0 0 1 0-.281l2.85-2.892a.2.2 0 0 1 .284 0l6.14 6.209L20.726 2.97Z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c10 c16"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c17"
      >
        <div
          class="c7 c18"
        >
          <div
            class="c19"
          >
            <div
              class="c7 c20"
            >
              <h2
                class="c10 c21"
              >
                Details
              </h2>
              <div
                class="c22"
              >
                <div
                  class="c23"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div>
                        <div
                          class="c7 c24 c25"
                        >
                          <label
                            class="c10 c26"
                            for="1"
                          >
                            <div
                              class="c7 c9"
                            >
                              Name
                              <span
                                class="c10 c27 c28"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c7 c8 c29"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              aria-required="true"
                              class="c30"
                              id="1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c23"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c31"
                    >
                      <div>
                        <div
                          class="c7 c24 c25"
                        >
                          <div
                            class="c7 c9"
                          >
                            <label
                              class="c10 c26"
                              for="3"
                            >
                              <div
                                class="c7 c9"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c32"
                          >
                            <textarea
                              aria-invalid="false"
                              aria-required="false"
                              class="c33"
                              id="3"
                              name="description"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c23"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c7 c24 c25"
                      >
                        <label
                          class="c10 c26"
                          for="5"
                        >
                          <div
                            class="c7 c9"
                          >
                            Token duration
                            <span
                              class="c10 c27 c28"
                            >
                              *
                            </span>
                          </div>
                        </label>
                        <div
                          class="c7 c9 c34"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="5 5-label 5-content"
                            class="c35"
                            id="5"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c7 c8 c36"
                          >
                            <div
                              class="c7 c9"
                            >
                              <div
                                class="c37"
                              >
                                <span
                                  class="c10 c38"
                                  id="5-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c7 c9"
                            >
                              <button
                                aria-hidden="true"
                                class="c39 c40 c41"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1rem"
                                  viewBox="0 0 14 8"
                                  width="1rem"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c10 c42"
                    />
                  </div>
                </div>
                <div
                  class="c23"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c7 c24 c25"
                      >
                        <label
                          class="c10 c26"
                          for="7"
                        >
                          <div
                            class="c7 c9"
                          >
                            Token type
                            <span
                              class="c10 c27 c28"
                            >
                              *
                            </span>
                          </div>
                        </label>
                        <div
                          class="c7 c9 c34"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="7 7-label 7-content"
                            class="c35"
                            id="7"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c7 c8 c36"
                          >
                            <div
                              class="c7 c9"
                            >
                              <div
                                class="c37"
                              >
                                <span
                                  class="c10 c38"
                                  id="7-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c7 c9"
                            >
                              <button
                                aria-hidden="true"
                                class="c39 c40 c41"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1rem"
                                  viewBox="0 0 14 8"
                                  width="1rem"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c43 c44"
          >
            <div
              class="c45"
            >
              <div
                class="c46"
              >
                <div
                  class="c7 c47"
                >
                  <h2
                    class="c10 c21"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c10 c48"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c49"
                >
                  <div
                    aria-disabled="false"
                    class="c50 c51"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c7 c52 c8 c53"
                    >
                      <div
                        class="c7 c54 c9 c55"
                      >
                        <button
                          aria-controls="accordion-content-8"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-8"
                          class="c7 c56 c9 c57 c58"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c10 c59"
                          >
                            <span
                              class="c10 c60"
                              id="accordion-label-8"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c7 c9 c55"
                        >
                          <span
                            aria-hidden="true"
                            class="c7 c61 c62"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c63 c64"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c50 c65"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c7 c66 c8 c53"
                    >
                      <div
                        class="c7 c54 c9 c55"
                      >
                        <button
                          aria-controls="accordion-content-9"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-9"
                          class="c7 c56 c9 c57 c58"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c10 c59"
                          >
                            <span
                              class="c10 c60"
                              id="accordion-label-9"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c7 c9 c55"
                        >
                          <span
                            aria-hidden="true"
                            class="c7 c61 c62"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c63 c64"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c67"
            >
              <div
                class="c68"
                style="min-height: 100%;"
              >
                <div
                  class="c7 c47"
                >
                  <h3
                    class="c10 c21"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c10 c48"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c69"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c13 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c18 {
  padding-right: 56px;
  padding-left: 56px;
}

.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c20 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c21 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c27 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c45 {
  padding-right: 16px;
  padding-left: 16px;
}

.c47 {
  padding-left: 12px;
}

.c54 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c57 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c59 {
  background: #ffffff;
  padding: 16px;
}

.c78 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c60 {
  border-radius: 4px;
}

.c62 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c64 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c66 {
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c71 {
  background: #dcdce4;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c73 {
  color: #666687;
  width: 0.6875rem;
}

.c76 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
}

.c23 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c28 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c32 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c58 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c72 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c16 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c24 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 500;
  color: #32324d;
}

.c26 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c29 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c34 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c35 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c46 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c50 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c52 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c69 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c70 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c61 {
  border: 1px solid #f6f6f9;
}

.c61:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c61:hover:not([aria-disabled='true']) .c10 {
  color: #4945ff;
}

.c61:hover:not([aria-disabled='true']) > .c7 {
  background: #f0f0ff;
}

.c61:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c75 {
  border: 1px solid #ffffff;
}

.c75:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c75:hover:not([aria-disabled='true']) .c10 {
  color: #4945ff;
}

.c75:hover:not([aria-disabled='true']) > .c7 {
  background: #f0f0ff;
}

.c75:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c74 path {
  fill: #666687;
}

.c33 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c33 > * + * {
  margin-top: 4px;
}

.c65 > * {
  margin-left: 0;
  margin-right: 0;
}

.c65 > * + * {
  margin-left: 12px;
}

.c67 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c67[aria-disabled='true'] {
  pointer-events: none;
}

.c67[aria-disabled='true'] svg path {
  fill: #666687;
}

.c67 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c67 svg path {
  fill: #4945ff;
}

.c67:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c67:focus-visible {
  outline: none;
}

.c67:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c68 {
  text-align: left;
}

.c68 > span {
  max-width: 100%;
}

.c68 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c68 svg path {
  fill: #8e8ea9;
}

.c63 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c63:hover svg path {
  fill: #4945ff;
}

.c14 {
  position: relative;
  outline: none;
}

.c14 svg {
  height: 12px;
  width: 12px;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c14[aria-disabled='true'] {
  pointer-events: none;
}

.c14:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c14:focus-visible {
  outline: none;
}

.c14:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c79 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c80[aria-disabled='true'] .c10 {
  color: #666687;
}

.c80[aria-disabled='true']:active .c10 {
  color: #666687;
}

.c15 {
  height: 2rem;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c15[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true'] .c10 {
  color: #666687;
}

.c15[aria-disabled='true'] svg > g,.c15[aria-disabled='true'] svg path {
  fill: #666687;
}

.c15[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true']:active .c10 {
  color: #666687;
}

.c15[aria-disabled='true']:active svg > g,.c15[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c15:hover {
  background-color: #f6f6f9;
}

.c15:active {
  background-color: #eaeaef;
}

.c15 .c10 {
  color: #32324d;
}

.c15 svg > g,
.c15 svg path {
  fill: #32324d;
}

.c17 {
  height: 2rem;
}

.c17[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c17[aria-disabled='true'] .c10 {
  color: #666687;
}

.c17[aria-disabled='true'] svg > g,.c17[aria-disabled='true'] svg path {
  fill: #666687;
}

.c17[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c17[aria-disabled='true']:active .c10 {
  color: #666687;
}

.c17[aria-disabled='true']:active svg > g,.c17[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c17:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c17:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c17 svg > g,
.c17 svg path {
  fill: #ffffff;
}

.c36 {
  line-height: 0;
}

.c38 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c38::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38[aria-disabled='true'] {
  color: inherit;
}

.c38:focus {
  outline: none;
  box-shadow: none;
}

.c37 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c37:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c42 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  color: #666687;
  background: #eaeaef;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c42:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c51 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c51:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c48 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c48 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c48 svg path {
  fill: #666687;
}

.c49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: not-allowed;
}

.c49 svg {
  width: 0.375rem;
}

.c53 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c53 svg {
  width: 0.375rem;
}

.c43 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c43:focus {
  outline: none;
}

.c43[aria-disabled='true'] {
  cursor: not-allowed;
}

.c44 {
  width: 100%;
}

.c30 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c55 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c31 {
  grid-column: span 6;
  max-width: 100%;
}

.c56 {
  grid-column: span 7;
  max-width: 100%;
}

.c77 {
  grid-column: span 5;
  max-width: 100%;
}

.c0:focus-visible {
  outline: none;
}

.c40 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c40:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c41 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c41::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c41:focus-within {
  outline: none;
}

.c39 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c39 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c39 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c39 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c39 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c22 {
  margin-right: 24px;
}

.c22 svg {
  width: 2rem;
  height: 2rem;
}

.c25 {
  word-break: break-all;
}

.c4 {
  padding-right: 8px;
}

.c6 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c3 svg path {
  fill: #4945ff;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (max-width:68.75rem) {
  .c31 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c31 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c56 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c56 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c77 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c77 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c4 c5"
              >
                <svg
                  fill="none"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 0 1-.2.2H5.74l8.239 8.239a.2.2 0 0 1 0 .282L12.14 23.86a.2.2 0 0 1-.282 0L.14 12.14a.2.2 0 0 1 0-.282L11.86.14a.2.2 0 0 1 .282 0L13.98 1.98a.2.2 0 0 1 0 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6Z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c6"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c7 c8"
          >
            <div
              class="c7 c9"
            >
              <h1
                class="c10 c11"
              >
                My super token
              </h1>
            </div>
            <div
              class="c7 c12"
            >
              <button
                aria-disabled="false"
                class="c7 c13 c12 c14 c15"
                name="regenerate"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M15.681 2.804A9.64 9.64 0 0 0 11.818 2C6.398 2 2 6.48 2 12c0 5.521 4.397 10 9.818 10 2.03 0 4.011-.641 5.67-1.835a9.987 9.987 0 0 0 3.589-4.831 1.117 1.117 0 0 0-.664-1.418 1.086 1.086 0 0 0-1.393.676 7.769 7.769 0 0 1-2.792 3.758 7.546 7.546 0 0 1-4.41 1.428V4.222h.002a7.492 7.492 0 0 1 3.003.625 7.61 7.61 0 0 1 2.5 1.762l.464.551-2.986 3.042a.186.186 0 0 0 .129.316H22V3.317a.188.188 0 0 0-.112-.172.179.179 0 0 0-.199.04l-2.355 2.4-.394-.468-.02-.02a9.791 9.791 0 0 0-3.239-2.293Zm-3.863 1.418V2v2.222Zm0 0v15.556c-4.216 0-7.636-3.484-7.636-7.778s3.42-7.777 7.636-7.778Z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <span
                  class="c10 c16"
                >
                  Regenerate
                </span>
              </button>
              <button
                aria-disabled="false"
                class="c7 c13 c12 c14 c17"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class=""
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 24 24"
                    width="1rem"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 0 1 .286 0l2.85 2.89a.2.2 0 0 1 0 .28L9.554 20.854a.2.2 0 0 1-.285 0l-9.13-9.243a.2.2 0 0 1 0-.281l2.85-2.892a.2.2 0 0 1 .284 0l6.14 6.209L20.726 2.97Z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c10 c16"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c18"
      >
        <div
          class="c7 c19"
        >
          <div
            class="c7 c20 c9"
          >
            <div
              class="c7 c21 c9 c22"
            >
              <svg
                fill="none"
                height="1rem"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 1 1 0-4H23v4h-2v4h-4v-4ZM7 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c7 c23"
            >
              <div
                class="c7 c9"
              >
                <span
                  class="c10 c24 c25"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c10 c26"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c27"
          >
            <div
              class="c7 c28"
            >
              <h2
                class="c10 c29"
              >
                Details
              </h2>
              <div
                class="c30"
              >
                <div
                  class="c31"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div>
                        <div
                          class="c7 c32 c33"
                        >
                          <label
                            class="c10 c34"
                            for="12"
                          >
                            <div
                              class="c7 c9"
                            >
                              Name
                              <span
                                class="c10 c35 c36"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c7 c8 c37"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              aria-required="true"
                              class="c38"
                              id="12"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c31"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c39"
                    >
                      <div>
                        <div
                          class="c7 c32 c33"
                        >
                          <div
                            class="c7 c9"
                          >
                            <label
                              class="c10 c34"
                              for="14"
                            >
                              <div
                                class="c7 c9"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c40"
                          >
                            <textarea
                              aria-invalid="false"
                              aria-required="false"
                              class="c41"
                              id="14"
                              name="description"
                            >
                              This describe my super token
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c31"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c7 c32 c33"
                      >
                        <label
                          class="c10 c34"
                          for="16"
                        >
                          <div
                            class="c7 c9"
                          >
                            Token duration
                            <span
                              class="c10 c35 c36"
                            >
                              *
                            </span>
                          </div>
                        </label>
                        <div
                          class="c7 c9 c42"
                          disabled=""
                        >
                          <button
                            aria-disabled="true"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="16 16-label 16-content"
                            class="c43"
                            id="16"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c7 c8 c44"
                          >
                            <div
                              class="c7 c9"
                            >
                              <div
                                class="c45"
                              >
                                <span
                                  class="c10 c46"
                                  id="16-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c7 c9"
                            >
                              <button
                                aria-hidden="true"
                                class="c47 c48 c49"
                                disabled=""
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1rem"
                                  viewBox="0 0 14 8"
                                  width="1rem"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c10 c50"
                    >
                      Expiration date: Unlimited
                    </span>
                  </div>
                </div>
                <div
                  class="c31"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c7 c32 c33"
                      >
                        <label
                          class="c10 c34"
                          for="18"
                        >
                          <div
                            class="c7 c9"
                          >
                            Token type
                            <span
                              class="c10 c35 c36"
                            >
                              *
                            </span>
                          </div>
                        </label>
                        <div
                          class="c7 c9 c51"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="18 18-label 18-content"
                            class="c43"
                            id="18"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c7 c8 c44"
                          >
                            <div
                              class="c7 c9"
                            >
                              <div
                                class="c45"
                              >
                                <span
                                  class="c10 c52"
                                  id="18-content"
                                >
                                  Read-only
                                </span>
                              </div>
                            </div>
                            <div
                              class="c7 c9"
                            >
                              <button
                                aria-hidden="true"
                                class="c47 c48 c53"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1rem"
                                  viewBox="0 0 14 8"
                                  width="1rem"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c54 c55"
          >
            <div
              class="c56"
            >
              <div
                class="c57"
              >
                <div
                  class="c7 c58"
                >
                  <h2
                    class="c10 c29"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c10 c26"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c59"
                >
                  <div
                    aria-disabled="false"
                    class="c60 c61"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c7 c62 c8 c63"
                    >
                      <div
                        class="c7 c64 c9 c65"
                      >
                        <button
                          aria-controls="accordion-content-19"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-19"
                          class="c7 c66 c9 c67 c68"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c10 c69"
                          >
                            <span
                              class="c10 c70"
                              id="accordion-label-19"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c7 c9 c65"
                        >
                          <span
                            aria-hidden="true"
                            class="c7 c71 c72"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c73 c74"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c60 c75"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c7 c76 c8 c63"
                    >
                      <div
                        class="c7 c64 c9 c65"
                      >
                        <button
                          aria-controls="accordion-content-20"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-20"
                          class="c7 c66 c9 c67 c68"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c10 c69"
                          >
                            <span
                              class="c10 c70"
                              id="accordion-label-20"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c7 c9 c65"
                        >
                          <span
                            aria-hidden="true"
                            class="c7 c71 c72"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c73 c74"
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c77"
            >
              <div
                class="c78"
                style="min-height: 100%;"
              >
                <div
                  class="c7 c58"
                >
                  <h3
                    class="c10 c29"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c10 c26"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c79"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
